select parent, new row inserts after item, fixed invisible items

--- a/content/admin-style.css
+++ b/content/admin-style.css
@@ -323,15 +323,19 @@ input {
   padding:30px;
 }
 .userImg {
-  padding:10px;
+  padding:15px;
   /*width:25%;
   height:25%;*/
   width:25%;
   height:300px;
-  border:1px solid lightgray;
+  border:1px solid white;
   float:left;
   overflow:hidden;
   position:relative;
+  transition:border 150ms;
+}
+.userImg:hover {
+  border:1px solid gray;
 }
 .userImg img {
   position: relative;
@@ -348,13 +352,14 @@ input {
   text-align:right;
   font-weight:bold;
   color:lightgray;
-  font-size:30px;
+  font-size:20px;
   text-align:right;
   position:absolute;
   right:5px;
-  top:5px;
+  top:0;
   z-index:2;
   cursor:pointer;
+  transition:color 150ms;
 }
 .deleteImage:hover {
   color:#E1341E;
